<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>h264_decoder_node</name>
  <version>0.1.0</version>
  <description>H264 to sensor_msgs/Image decoder node using GStreamer + nvv4l2decoder</description>
  <maintainer email="araya@todo.todo">araya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>libgstreamer1.0-dev</build_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-bad</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
